# tetra

./: .gitignore  README.md  install_and_run.sh  pyproject.toml
examples/: README_tensor_reshape.md  example.py  image_classification.py  rp.py  simple_inference.py  simple_tensor_reshape.py  tensor_reshape.py  text_generation.py
tetra/: __init__.py  client.py  runpod.py
