[tool.poetry]
name = "tetra"
version = "0.1.0"
description = "Execute functions remotely"
authors = ["Marut Pandya <pandyamarut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "1.7.0"
protobuf = ">=4.21.0"
grpcio-tools = "^1.7.0"
runpod = "^1.6.2"
cloudpickle = "^3.1.1"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
torch = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[[source]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"